syntax = "proto3";

option csharp_namespace = "GrpcClientStreamingExample";

service Weather {
  rpc RecordTemperatures(stream TemperatureReading) returns (TemperatureSummary);
}

message TemperatureReading {
  string city = 1;
  int32 temperature = 2;
  string timestamp = 3;
}

message TemperatureSummary {
  string city = 1;
  float averageTemperature = 2;
}